force-app/main/default/objects/Credential__c/Credential__c.object-meta.xml
<CustomObject>
    <description>The core transaction object. One record per credential requirement per person or organisation. Tracks the full lifecycle from the admin requesting a submission through volunteer intake, admin verification, and eventual expiry. OWD is Private - volunteers cannot see each other&apos;s records.</description>
    <label>Credential</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credentials</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>