force-app/main/default/objects/Credential__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional link to an organisation (Account). Use when the credential requirement belongs to an organisation rather than, or in addition to, an individual. At least one of Account or Contact should be populated - see docs/todo.md for the planned validation rule to enforce this.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credentials</relationshipLabel>
    <relationshipName>Credentials_Account</relationshipName>
    <type>Lookup</type>
</CustomField>