force-app/main/default/objects/Credential__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional link to an individual volunteer (Contact). Use when the credential requirement belongs to a person. At least one of Contact or Account should be populated - see docs/todo.md for the planned validation rule to enforce this. The submission confirmation email is sent to this contact.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credentials</relationshipLabel>
    <relationshipName>Credentials_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>