force-app/main/default/objects/Credential__c/fields/Credential_Type__c.field-meta.xml
<CustomField>
    <fullName>Credential_Type__c</fullName>
    <description>The document category this credential belongs to. Drives the volunteer form label (Type__c), the link expiry window (Link_Expiry_Days__c), the expiry notification lead time (Days_Before_Expiry__c), and whether an expiry date is required (Does_Not_Expire__c).</description>
    <label>Credential Type</label>
    <referenceTo>Credential_Type__c</referenceTo>
    <relationshipLabel>Credentials</relationshipLabel>
    <relationshipName>Credentials</relationshipName>
    <required>true</required>
    <!-- Restrict prevents a Credential Type being deleted while Credentials are still linked to it. SetNull is not viable for a required field. -->
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>