force-app/main/default/objects/Credential__c/fields/Does_Not_Expire__c.field-meta.xml
<CustomField>
    <fullName>Does_Not_Expire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Credential does not have an expiry Date</description>
    <label>Does Not Expire</label>
    <type>Checkbox</type>
</CustomField>