force-app/main/default/objects/Credential__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>The expiry date shown on the credential document, as entered by the volunteer. Hidden on the volunteer form when the parent Credential_Type__r.Does_Not_Expire__c is true. Used by the nightly Scheduled Flow to detect and mark expired credentials.</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>