force-app/main/default/objects/Credential__c/fields/Issued_By__c.field-meta.xml
<CustomField>
    <fullName>Issued_By__c</fullName>
    <description>The name of the authority or organisation that issued the credential document. Entered by the volunteer on the submission form (e.g. "NSW Police Force", "VicRoads"). Not validated against any reference list - free text to accommodate variation across jurisdictions.</description>
    <label>Issued By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>