force-app/main/default/objects/Credential__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <description>The date and time the admin changed Status to "Requested". Automatically stamped by a Before Update Record-Triggered Flow - not editable by users. This is the anchor point for the link expiry calculation: the Intake Flow compares TODAY() against DateValue(Requested_Date__c) + Credential_Type__r.Link_Expiry_Days__c.</description>
    <label>Requested Date</label>
    <type>DateTime</type>
</CustomField>