force-app/main/default/objects/Credential__c/fields/Sighted__c.field-meta.xml
<CustomField>
    <fullName>Sighted__c</fullName>
    <description>Admin-only verification flag. The admin ticks this after physically or digitally reviewing the uploaded credential document. A validation rule blocks Status from being set to "Active" unless this is true. Field History Tracking is enabled so all changes are recorded with user, timestamp, and old/new value - this is the audit trail for the verification step.</description>
    <defaultValue>false</defaultValue>
    <label>Sighted</label>
    <!-- trackHistory drives the Field History Tracking requirement from task 1.18. Requires enableHistory=true on the parent object. -->
    <type>Checkbox</type>
</CustomField>