force-app/main/default/objects/Credential__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Tracks the credential through its lifecycle. Draft -&gt; Requested (triggers link expiry timer) -&gt; Under Review (volunteer has submitted) -&gt; Active (admin verified and sighted). Expired is set by the nightly Scheduled Flow. Pending is reserved for future use (e.g. third-party verification step). A validation rule blocks transitioning to Active without Sighted__c being true.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>