force-app/main/default/objects/Credential__c/fields/Submission_Link__c.field-meta.xml
<CustomField>
    <fullName>Submission_Link__c</fullName>
    <description>Formula field that assembles the public volunteer submission URL. Displayed in the Highlights Panel so admins can easily copy and send it to volunteers.</description>
    <formula>&quot;https://sl1771816777101.my.site.com/credentials/s/submit?id=&quot; &amp; Unique_Token__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Link</label>
    <type>Text</type>
</CustomField>