force-app/main/default/objects/Credential__c/fields/Unique_Token__c.field-meta.xml
<CustomField>
    <fullName>Unique_Token__c</fullName>
    <description>A GUID (Globally Unique Identifier) generated by a Record-Triggered Flow on record creation. This is the access key embedded in the volunteer submission URL. It prevents IDOR attacks - an attacker cannot enumerate valid submission URLs by guessing record IDs. Must never appear on page layouts, list views, or reports visible to external users. See docs/security.md and docs/decisions/use-guid-token-for-access-control.md.</description>
    <label>Unique Token</label>
    <!-- 36 characters accommodates the standard GUID format: xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx -->
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>